add transition but still fail

--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,6 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-#up {
-  bottom: 300px; }
-
 .bannerbox {
   margin-top: 16px;
   width: 100%;
@@ -24,15 +21,12 @@
         text-align: center;
         width: 1200px;
         height: 380px;
-        -webkit-transition: 5s;
-        -o-transition: 5s;
-        transition: 5s;
-        position: relative; }
+        position: relative;
+        -webkit-transition: all 3s !important;
+        -o-transition: all 3s !important;
+        transition: all 3s !important; }
         .bannerbox .banner .wrap .imgbox img {
-          width: 100%;
-          -webkit-transition-duration: all 5s;
-          -o-transition-duration: all 5s;
-          transition-duration: all 5s; }
+          width: 100%; }
         .bannerbox .banner .wrap .imgbox .btn {
           position: absolute;
           right: 0;
