--- a/src/index.css
+++ b/src/index.css
@@ -21,10 +21,7 @@
         text-align: center;
         width: 1200px;
         height: 380px;
-        position: relative;
-        -webkit-transition: all 3s !important;
-        -o-transition: all 3s !important;
-        transition: all 3s !important; }
+        position: relative; }
         .bannerbox .banner .wrap .imgbox img {
           width: 100%; }
         .bannerbox .banner .wrap .imgbox .btn {
@@ -34,5 +31,4 @@
           opacity: .4;
           color: white;
           padding: 3px;
-          bottom: 0;
-          display: none; }
+          bottom: 0; }
