--- a/src/index.css
+++ b/src/index.css
@@ -31,4 +31,5 @@
           opacity: .4;
           color: white;
           padding: 3px;
-          bottom: 0; }
+          bottom: 0;
+          display: none; }
