--- a/src/index.scss
+++ b/src/index.scss
@@ -17,7 +17,8 @@
       display: inline-block;
       position: relative;
       .imgbox {
-        display: inline-block; //  bottom: 300px; //banner向上
+        display: inline-block;
+        bottom: 300px; //banner向上
         text-align: center;
         width: 1200px;
         height: 380px;
@@ -33,7 +34,7 @@
           color: white;
           padding: 3px;
           bottom: 0;
-          display: none;
+          display: block;
         }
       }
     }
