--- a/src/index.css
+++ b/src/index.css
@@ -5,32 +5,26 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
-.bannerbox {
-  margin-top: 16px;
-  width: 100%;
-  overflow: hidden; }
-  .bannerbox .banner {
-    text-align: center; }
-    .bannerbox .banner .wrap {
-      text-align: center;
-      width: 100%;
-      display: inline-block;
-      position: relative; }
-      .bannerbox .banner .wrap .imgbox {
-        display: inline-block;
-        bottom: 300px;
-        text-align: center;
-        width: 1200px;
-        height: 380px;
-        position: relative; }
-        .bannerbox .banner .wrap .imgbox img {
-          width: 100%; }
-        .bannerbox .banner .wrap .imgbox .btn {
-          position: absolute;
-          right: 0;
-          background-color: black;
-          opacity: .4;
-          color: white;
-          padding: 3px;
-          bottom: 0;
-          display: block; }
+.banner {
+  text-align: center; }
+  .banner .wrap {
+    text-align: center;
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    bottom: 300px;
+    text-align: center;
+    width: 1200px;
+    height: 380px;
+    position: relative; }
+    .banner .wrap .img {
+      text-align: center; }
+    .banner .wrap .btn {
+      position: absolute;
+      right: 0;
+      background-color: black;
+      opacity: .4;
+      color: white;
+      padding: 3px;
+      bottom: 0;
+      display: block; }
