--- a/src/index.scss
+++ b/src/index.scss
@@ -5,38 +5,30 @@
   box-sizing: border-box;
 }
 
-.bannerbox {
-  margin-top: 16px;
-  width: 100%;
-  overflow: hidden;
-  .banner {
+.banner {
+  text-align: center;
+  .wrap {
     text-align: center;
-    .wrap {
+    width: 100%;
+    position: relative;
+    display: inline-block; // 
+    bottom: 300px; //banner向上
+    text-align: center;
+    width: 1200px;
+    height: 380px;
+    position: relative;
+    .img {
       text-align: center;
-      width: 100%;
-      display: inline-block;
-      position: relative;
-      .imgbox {
-        display: inline-block;
-        bottom: 300px; //banner向上
-        text-align: center;
-        width: 1200px;
-        height: 380px;
-        position: relative;
-        img {
-          width: 100%;
-        }
-        .btn {
-          position: absolute;
-          right: 0;
-          background-color: black;
-          opacity: .4;
-          color: white;
-          padding: 3px;
-          bottom: 0;
-          display: block;
-        }
-      }
+    }
+    .btn {
+      position: absolute;
+      right: 0;
+      background-color: black;
+      opacity: .4;
+      color: white;
+      padding: 3px;
+      bottom: 0;
+      display: block;
     }
   }
 }
