--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,28 @@
+body {
+  text-align: center; }
+
 * {
-  outline: 1px solid red;
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
   box-sizing: border-box; }
 
 .banner {
-  text-align: center; }
+  display: inline-block;
+  text-align: center;
+  margin-top: 5%;
+  overflow: hidden;
+  width: 1200px;
+  height: 300px; }
   .banner .wrap {
     text-align: center;
     width: 100%;
     position: relative;
     display: inline-block;
-    bottom: 300px;
     text-align: center;
     width: 1200px;
     height: 380px;
+    bottom: 300px;
     position: relative; }
     .banner .wrap .img {
       text-align: center; }
