--- a/src/index.scss
+++ b/src/index.scss
@@ -1,21 +1,30 @@
+body {
+  text-align: center;
+}
+
 * {
-  outline: 1px solid red;
+  // outline: 1px solid red;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 .banner {
+  display: inline-block;
   text-align: center;
+  margin-top: 5%;
+  overflow: hidden;
+  width: 1200px;
+  height: 300px;
   .wrap {
     text-align: center;
     width: 100%;
     position: relative;
-    display: inline-block; // 
-    bottom: 300px; //banner向上
+    display: inline-block;
     text-align: center;
     width: 1200px;
     height: 380px;
+    bottom: 300px;
     position: relative;
     .img {
       text-align: center;
